actualización de descarga

--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
             <a href="/assets/hash/DocumentoPorPartes.zip" class="documento-original" download>Documento original</a>
             <h2></h2>
             <ul id="list1">
-                <li><a href="/assets/hash/Hash01.zip" class="recurso">Recurso 1</a></li>
-                <li><a href="/assets/hash/Hash02.zip" class="recurso">Recurso 2</a></li>
-                <li><a href="/assets/hash/Hash03.zip" class="recurso">Recurso 3</a></li>
-                <li><a href="/assets/hash/Hash04.zip" class="recurso">Recurso 4</a></li>
+                <li><a href="/assets/hash/Hash01.zip" class="recurso" download>Recurso 1</a></li>
+                <li><a href="/assets/hash/Hash02.zip" class="recurso" download>Recurso 2</a></li>
+                <li><a href="/assets/hash/Hash03.zip" class="recurso" download>Recurso 3</a></li>
+                <li><a href="/assets/hash/Hash04.zip" class="recurso" download>Recurso 4</a></li>
             </ul>
         </section>
         <div id="assignButtonContainer">
@@ -29,10 +29,10 @@
         <section id="ejercicio2" class="exercise-section">
             <h2>Análisis de contraseñas</h2>
             <ul id="list2">
-                <li><a href="/assets/contrasenias/document1.zip" class="recurso">Recurso A</a></li>
-                <li><a href="/assets/contrasenias/document2.zip" class="recurso">Recurso B</a></li>
-                <li><a href="/assets/contrasenias/document3.zip" class="recurso">Recurso C</a></li>
-                <li><a href="/assets/contrasenias/document4.zip" class="recurso">Recurso D</a></li>
+                <li><a href="/assets/contrasenias/document1.zip" class="recurso" download>Recurso A</a></li>
+                <li><a href="/assets/contrasenias/document2.zip" class="recurso" download>Recurso B</a></li>
+                <li><a href="/assets/contrasenias/document3.zip" class="recurso" download>Recurso C</a></li>
+                <li><a href="/assets/contrasenias/document4.zip" class="recurso" download>Recurso D</a></li>
             </ul>
         </section>
     </main>
