--- a/index.html
+++ b/index.html
@@ -15,13 +15,13 @@
     <main>
         <section id="ejercicio1" class="exercise-section">
             <h2>Integridad de información</h2>
-            <a href="/assets/hash/DocumentoPorPartes.zip" class="documento-original" download>Documento original</a>
+            <a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/hash/DocumentoPorPartes.zip" class="documento-original" download>Documento original</a>
             <h2></h2>
             <ul id="list1">
-                <li><a href="/assets/hash/Hash01.zip" class="recurso" download>Recurso 1</a></li>
-                <li><a href="/assets/hash/Hash02.zip" class="recurso" download>Recurso 2</a></li>
-                <li><a href="/assets/hash/Hash03.zip" class="recurso" download>Recurso 3</a></li>
-                <li><a href="/assets/hash/Hash04.zip" class="recurso" download>Recurso 4</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/hash/Hash01.zip" class="recurso" download>Recurso 1</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/hash/Hash02.zip" class="recurso" download>Recurso 2</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/hash/Hash03.zip" class="recurso" download>Recurso 3</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/hash/Hash04.zip" class="recurso" download>Recurso 4</a></li>
             </ul>
         </section>
         <div id="assignButtonContainer">
@@ -31,10 +31,10 @@
         <section id="ejercicio2" class="exercise-section">
             <h2>Análisis de contraseñas</h2>
             <ul id="list2">
-                <li><a href="/assets/contrasenias/document1.zip" class="recurso" download>Recurso A</a></li>
-                <li><a href="/assets/contrasenias/document2.zip" class="recurso" download>Recurso B</a></li>
-                <li><a href="/assets/contrasenias/document3.zip" class="recurso" download>Recurso C</a></li>
-                <li><a href="/assets/contrasenias/document4.zip" class="recurso" download>Recurso D</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/contrasenias/document1.zip" class="recurso" download>Recurso A</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/contrasenias/document2.zip" class="recurso" download>Recurso B</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/contrasenias/document3.zip" class="recurso" download>Recurso C</a></li>
+                <li><a href="https://github.com/jritsqmet/seguridad-web/raw/2b311a2407c76bb61b83c852e0edbb83b1e0202c/assets/contrasenias/document4.zip" class="recurso" download>Recurso D</a></li>
             </ul>
         </section>
     </main>
