--- a/par2/fcebe1eae.html
+++ b/par2/fcebe1eae.html
@@ -198,8 +198,8 @@
             errorMessage.style.display = 'none';
             successMessage.style.display = 'none';
             
-            // Contraseña secreta (cámbiala por la que quieras)
-            const secretPassword = "h4ck3r2023";
+            // Contraseña secreta 
+            const secretPassword = "fcebeeae7cfea021c86af13383b02e9d84fe035f78ad86011ddcf265b5a38e28";
             
             if(password === secretPassword) {
                 // Contraseña correcta
