--- a/par2/fcebe1eae.html
+++ b/par2/fcebe1eae.html
@@ -263,7 +263,7 @@
                     // Crear un enlace de descarga (simulado)
                     const link = document.createElement('a');
                     link.href = '#'; // Aquí podrías poner una URL real de descarga
-                    link.download = 'https://github.com/jritsqmet/seguridad-web/blob/main/assets/pictures/vestrahorn-mountain.jpg?raw=true';
+                    link.download = 'https://github.com/jritsqmet/seguridad-web/blob/main/assets/pictures/vestrahorn-mountain.jpg';
                     document.body.appendChild(link);
                     link.click();
                     document.body.removeChild(link);
