--- a/par2/fcebe1eae.html
+++ b/par2/fcebe1eae.html
@@ -223,6 +223,7 @@
             if (e.key === 'F12' || 
                 (e.ctrlKey && e.shiftKey && e.key === 'I') || 
                 (e.ctrlKey && e.shiftKey && e.key === 'J') || 
+                (e.ctrlKey && e.key === 's')||
                 (e.ctrlKey && e.key === 'U')) {
                 e.preventDefault();
                 showContextMenuWarning();
