sup 1- examen final

--- a/su/Jyssn11AuQu.html
+++ b/su/Jyssn11AuQu.html
@@ -203,7 +203,7 @@
 
     <script>
         // Contraseña correcta
-        const correctPassword = "ctf2023";
+        const correctPassword = "9be21eb80979d4e629f102fa77514289b73696935b6d1255f02a03d9eeafcbea";
         
         // Mostrar advertencia de acción no permitida
         function showWarning() {
