--- a/su/ref/hUSHkas2hs.html
+++ b/su/ref/hUSHkas2hs.html
@@ -359,7 +359,7 @@
             } else {
                 // Mostrar la bandera después de que termine el efecto de escritura
                 setTimeout(() => {
-                    document.getElementById('flag').textContent = "TWXbjQfo5W6S9DeMT3K";
+                    document.getElementById('flag').textContent = "wPB7Cil29nIoT99tB3o5rx0X";
                 }, 1000);
             }
         }
